--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Mezough Abdelhak</h1>
-    <img src="/Images/first-img.jpg" width="500px" height="500px"
+    <img src="Images/first-img.jpg" width="500px" height="500px"
         alt="my image as a photographer">
 
     <p>A web developper and GAMES Lover</p>
@@ -34,9 +34,9 @@
     <h3>Skills and favorite hobbies</h3>
     <p>I will link some of my skills and favourite hobbies that i love doing</p>
     <ol>
-        <li><a href="/pages/skills.html">SKILLS</a></li>
-        <li><a href="/pages/hobbies.html">HOBBIES</a></li>
-        <li><a href="/pages/food.html">FOOD</a></li>
+        <li><a href="pages/skills.html">SKILLS</a></li>
+        <li><a href="pages/hobbies.html">HOBBIES</a></li>
+        <li><a href="pages/food.html">FOOD</a></li>
     </ol>
 </body>
 
