--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -37,8 +37,7 @@
         </li>
 
     </ol>
-    <a href="/Links-and-Images/Presentation Project/index.html">Home</a>
-
+    <a href="/index.html">Home</a>
 
 </body>
 
