--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <ol>
         <li><a href="pages/skills.html">SKILLS</a></li>
         <li><a href="./pages/hobbies.html">HOBBIES</a></li>
-        <li><a href="/pages/food.html">FOOD</a></li>
+        <li><a href="pages/food.html">FOOD</a></li>
     </ol>
 </body>
 
