--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <p>I will link some of my skills and favourite hobbies that i love doing</p>
     <ol>
         <li><a href="pages/skills.html">SKILLS</a></li>
-        <li><a href="./pages/hobbies.html">HOBBIES</a></li>
-        <li><a href="./pages/food.html">FOOD</a></li>
+        <li><a href="pages/hobbies.html">HOBBIES</a></li>
+        <li><a href="pages/food.html">FOOD</a></li>
     </ol>
 </body>
 
