--- a/pages/skills.html
+++ b/pages/skills.html
@@ -16,7 +16,7 @@
         <li>Figma</li>
         <li>GitHub</li>
     </ul>
-    <a href="index.html">Home</a>
+<a href="/index.html">Home</a>
 
 </body>
 </html>
