--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Mezough Abdelhak</h1>
-    <img src="../Images/first-img.jpg" width="500px" height="500px"
+    <img src="/Images/first-img.jpg" width="500px" height="500px"
         alt="my image as a photographer">
 
     <p>A web developper and GAMES Lover</p>
